aws_infra/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: massage-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: massage-website
  template:
    metadata:
      labels:
        app: massage-website
    spec:
      containers:
      - name: massage-website
        image: ${ECR_REGISTRY}${IMAGE_TAG}  # Removed extra colon
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
