aws_infra/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: massage-website-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5001
    protocol: TCP
  selector:
    app: massage-website
